--- a/store.html
+++ b/store.html
@@ -8,96 +8,87 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/w3.css">
+    <script src="/js/w3.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <title>Flies and Ties</title>
 </head>
 
 <body>
-    <div id="background-image">
-        <div class="w3-bar w3-black w3-top ">
-            <a href="#" class="w3-bar-item w3-button">Flies and Ties</a>
-            <a href="#" class="w3-bar-item w3-button">Home</a>
-            <a href="about.html" class="w3-bar-item w3-button">About</a>
-            <div class="w3-dropdown-hover">
-                <button class="w3-button">Store</button>
-                <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                    <a href="#" class="w3-bar-item w3-button">Flies</a>
-                    <a href="#" class="w3-bar-item w3-button">Gear</a>
-                    <a href="#" class="w3-bar-item w3-button">Aquipment</a>
-                </div>
-            </div>
-            <a href=""><span class="w3-bar-item w3-button glyphicon glyphicon-shopping-cart w3-right"></span></a>
-        </div>
-        <br>
 
-        <div>
-            <h1 class="w3-center w3-wide text-white" id="text-white ">The Best hand made flies</h1>
-            <p class="w3-center text-white w3-wide" style="margin: 0;">We Supply if their whet or dry</p>
-        </div>
+    <!-- Navbar -->
+    <div class="w3-bar w3-black w3-top w3-large" style="border-bottom: 0.1px solid white;">
+        <a href="/index.html" class="w3-bar-item w3-button">Flies and Ties</a>
+        <a href="/index.html" class="w3-bar-item w3-button">Home</a>
+        <a href="/about.html" class="w3-bar-item w3-button">About us</a>
+        <a href="store.html" class="w3-bar-item w3-button">Store</a>
+        <a href="cart.html"><span class="w3-bar-item w3-button glyphicon glyphicon-shopping-cart w3-right"></span></a>
+    </div>
+    <br>
+    <!-- Jumbo Tron -->
+    <div id="background-quang">
+        <h1 class="w3-center w3-wide text-white" id="text-white" style="margin:0; padding-top: 100px;">The Best hand
+            made flies</h1>
+        <p class="w3-center text-white w3-wide">We Supply if they're whet or dry!</p>
+        <h3 class="w3-center text-white w3-wide" style="margin:0; padding-top:100px;padding-bottom: 100px;">Our Store
+        </h3>
 
-        <div class="w3-black store-header">
-            <h3 class="w3-center ">Our Store</h3>
-        </div>
-
-
-
-        <div class=" w3-row-padding">
+        <!-- Store cards  -->
+        <div class=" w3-row-padding" style="margin:0" id="background-quang">
             <div class="w3-card w3-third">
                 <img src="/images/worm.jpg" alt="Norway" style="width:100%">
                 <div class="w3-display-container w3-center w3-black">
                     <p>Whoolie Bugger</p>
                     <p>R20.00 <a href="">+<span class="glyphicon glyphicon-shopping-cart"></span></a></p>
-
                 </div>
             </div>
+
             <div class="w3-card w3-third">
                 <img src="/images/Untitled.png" alt="Norway" style="width:100%">
                 <div class="w3-display-container w3-center w3-black">
                     <p>May Fly</p>
                     <p>R33.00 <a href="">+<span class="glyphicon glyphicon-shopping-cart"></span></a></p>
-
                 </div>
             </div>
+
             <div class="w3-card w3-third">
                 <img src="/images/kakfly.png" alt="Norway" style="width:100%">
                 <div class="w3-display-container w3-center w3-black">
                     <p>Baby Butcher</p>
                     <p>R22.00 <a href="">+<span class="glyphicon glyphicon-shopping-cart"></span></a></p>
-
-                </div>
-            </div>
-            <div class=" w3-row-padding">
-
-                <div class="w3-card w3-third">
-                    <img src="/images/kakfly.png" alt="Norway" style="width:100%">
-                    <div class="w3-display-container w3-center w3-black">
-                        <p>Whoolie Bugger</p>
-                        <p>R20.00 <a href="">+<span class="glyphicon glyphicon-shopping-cart"></span></a></p>
-
-                    </div>
-                </div>
-                <div class="w3-card w3-third">
-                    <img src="/images/Untitled.png" alt="Norway" style="width:100%">
-                    <div class="w3-display-container w3-center w3-black">
-                        <p>May Fly</p>
-                        <p>R33.00 <a href="">+<span class="glyphicon glyphicon-shopping-cart"></span></a></p>
-
-                    </div>
-                </div>
-                <div class="w3-card w3-third">
-                    <img src="/images/worm.jpg" alt="Norway" style="width:100%">
-                    <div class="w3-display-container w3-center w3-black">
-                        <p>Baby Butcher</p>
-                        <p>R22.00 <a href="">+<span class="glyphicon glyphicon-shopping-cart"></span></a></p>
-
-                    </div>
                 </div>
             </div>
 
-            <div id="background-quang">
-                <h1 class="w3-center w3-wide text-white" id="text-white ">The Best hand made flies</h1>
-                <p class="w3-center text-white w3-wide" style="margin: 0;">We Supply if their whet or dry</p>
+            <div class="w3-card w3-third">
+                <img src="/images/kakfly.png" alt="Norway" style="width:100%">
+                <div class="w3-display-container w3-center w3-black">
+                    <p>Whoolie Bugger</p>
+                    <p>R20.00 <a href="">+<span class="glyphicon glyphicon-shopping-cart"></span></a></p>
+                </div>
+
             </div>
+
+            <div class="w3-card w3-third">
+                <img src="/images/Untitled.png" alt="Norway" style="width:100%">
+                <div class="w3-display-container w3-center w3-black">
+                    <p>May Fly</p>
+                    <p>R33.00 <a href="">+<span class="glyphicon glyphicon-shopping-cart"></span></a></p>
+                </div>
+            </div>
+
+            <div class="w3-card w3-third">
+                <img src="/images/worm.jpg" alt="Norway" style="width:100%">
+                <div class="w3-display-container w3-center w3-black">
+                    <p>Baby Butcher</p>
+                    <p>R22.00 <a href="">+<span class="glyphicon glyphicon-shopping-cart"></span></a></p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <div id="background-image"></div>
+
 </body>
 
 </html>
