--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/w3.css">
-    <script src="/js/w3.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/w3.css">
+    <script src="js/w3.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <title>Flies and Ties</title>
 </head>
 <body>
 
 <!-- Navbar -->
 <div class="w3-bar w3-black w3-top w3-large" style="border-bottom: 0.1px solid white;">
-    <a href="/index.html" class="w3-bar-item w3-button">Flies and Ties</a>
-    <a href="/index.html" class="w3-bar-item w3-button">Home</a>
-    <a href="/about.html" class="w3-bar-item w3-button">About us</a>
+    <a href="index.html" class="w3-bar-item w3-button">Flies and Ties</a>
+    <a href="index.html" class="w3-bar-item w3-button">Home</a>
+    <a href="about.html" class="w3-bar-item w3-button">About us</a>
     <a href="store.html" class="w3-bar-item w3-button">Store</a>
     <a href="cart.html"><span class="w3-bar-item w3-button glyphicon glyphicon-shopping-cart w3-right"></span></a>
+    <a href="register.html"><span class="w3-bar-item w3-button glyphicon glyphicon-user w3-right"></span></a>
 </div>
 <br>
 <!-- Jumbo Tron -->
@@ -31,32 +32,32 @@
     <!-- Store cards  -->
     <div class=" w3-row-padding"  style="margin:0" id="background-quang">
         <div class="w3-card w3-third">
-            <img src="/images/worm.jpg" alt="Norway" style="width:100%">
-            <div class="w3-display-container w3-center w3-black">
+            <img src="./images/kakfly.png" alt="Norway" style="width:100%">
+            <div class="w3-display-container w3-center w3-light-green">
                 <p>Whoolie Bugger</p>
                 <p>R20.00  <a href="">+<span class="glyphicon glyphicon-shopping-cart"></span></a></p>
             </div>
         </div>
 
         <div class="w3-card w3-third">
-            <img src="/images/Untitled.png" alt="Norway" style="width:100%">
-            <div class="w3-display-container w3-center w3-black">
+            <img src="./images/Untitled.png" alt="Norway" style="width:100%">
+            <div class="w3-display-container w3-center w3-light-green">
                 <p>May Fly</p>
                 <p>R33.00 <a href="">+<span class="glyphicon glyphicon-shopping-cart"></span></a></p>
             </div>
         </div>
 
         <div class="w3-card w3-third">
-            <img src="/images/kakfly.png" alt="Norway" style="width:100%">
-            <div class="w3-display-container w3-center w3-black">
+            <img src="./images/worm.jpg" alt="Norway" style="width:100%">
+            <div class="w3-display-container w3-center w3-light-green">
                 <p>Baby Butcher</p>
                 <p>R22.00 <a href="">+<span class="glyphicon glyphicon-shopping-cart"></span></a></p>
             </div>
         </div>
         
         <div class="w3-card w3-third">
-            <img src="/images/kakfly.png" alt="Norway" style="width:100%">
-            <div class="w3-display-container w3-center w3-black">
+            <img src="./images/kakfly.png" alt="Norway" style="width:100%">
+            <div class="w3-display-container w3-center w3-light-green">
                 <p>Whoolie Bugger</p>
                 <p>R20.00 <a href="">+<span class="glyphicon glyphicon-shopping-cart"></span></a></p>
             </div>
@@ -64,16 +65,16 @@
         </div>
 
         <div class="w3-card w3-third">
-            <img src="/images/Untitled.png" alt="Norway" style="width:100%">
-            <div class="w3-display-container w3-center w3-black">
+            <img src="./images/Untitled.png" alt="Norway" style="width:100%">
+            <div class="w3-display-container w3-center w3-light-green">
                 <p>May Fly</p>
                 <p>R33.00 <a href="">+<span class="glyphicon glyphicon-shopping-cart"></span></a></p>
             </div>
         </div>
 
         <div class="w3-card w3-third" >
-            <img src="/images/worm.jpg" alt="Norway" style="width:100%">
-            <div class="w3-display-container w3-center w3-black">
+            <img src="./images/worm.jpg" alt="Norway" style="width:100%">
+            <div class="w3-display-container w3-center w3-light-green">
                 <p>Baby Butcher</p>
                 <p>R22.00 <a href="">+<span class="glyphicon glyphicon-shopping-cart"></span></a></p>
             </div>
